--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,11 @@
     <fileset dir="${libdir}/">
       <include name="apache-openjpa-1.2.1/**/*.jar"/>
       <include name="spring-framework-3.0.0.RC1/**/*.jar"/>
+      <include name="mysql-connector-java-5.1.10/**/*.jar"/>
+    </fileset>
+    <fileset dir="${basedir}/build">
+      <include name="**/*"/>
+      <include name="*"/>
     </fileset>
   </path>
   
@@ -39,7 +44,27 @@
     </jar>
   </target>
   
-  <target name="run" depends="jar">
+  <target name="dbrefresh">
+    <path id="openjpa.path">
+      <fileset dir="${libdir}/">
+        <include name="apache-openjpa-1.2.1/**/*.jar"/>
+        <include name="spring-framework-3.0.0.RC1/**/*.jar"/>
+        <include name="mysql-connector-java-5.1.10/**/*.jar"/>
+      </fileset>
+      <pathelement location="${basedir}/build"/>
+    </path>
+
+    <taskdef name="mappingtool" classname="org.apache.openjpa.jdbc.ant.MappingToolTask">
+      <classpath refid="openjpa.path"/>
+    </taskdef>
+    
+    <mappingtool schemaaction="add">
+      <classpath refid="openjpa.path"/>
+      <config propertiesFile="build/META-INF/persistence.xml"/>
+    </mappingtool>
+  </target>
+  
+  <target name="run" depends="jar, dbrefresh">
     <java classname="${main.class}" fork="true" failonerror="true">
       <classpath refid="bookmarks.class.path"/>
       <classpath>
