--- a/src/WEB-INF/web.xml
+++ b/src/WEB-INF/web.xml
@@ -2,6 +2,12 @@
 	       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	       xsi:schemaLocation="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	       version="2.5">
+	       
+  <persistence-unit-ref>
+    <persistence-unit-ref-name>persistence/bookmarksPU</persistence-unit-ref-name>
+    <persistence-unit-name>bookmarksPU</persistence-unit-name>
+  </persistence-unit-ref>	       
+	       
   <servlet>
     <servlet-name>bookmarks</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
