Finally adding bookmarks through POST.  Upgraded to openjpa 1.3.0, though it didn't help with issue openjpa-673.

--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,13 @@
   </path>
   
   <target name="clean">
+    <delete>
+      <fileset dir="lib" includes="bookmarks-*"/>
+    </delete>
+    
     <delete dir="build"/>
+    <delete dir="dist"/>
+    
     <mkdir dir="build"/>
     <mkdir dir="dist"/>
   </target>
