Added funcitonality to delete a bookmark.  Added rudimentary tags.

--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,7 @@
     <copy todir="${basedir}/build">
       <fileset dir="${basedir}/src/">
         <include name="*-INF/**"/>
+        <include name="img/*"/>
       </fileset>
     </copy>
   </target>
