Added welcome file

--- a/build.xml
+++ b/build.xml
@@ -33,6 +33,7 @@
       <fileset dir="${basedir}/src/">
         <include name="*-INF/**"/>
         <include name="img/*"/>
+        <include name="*.jsp"/>
       </fileset>
     </copy>
   </target>
