--- a/src/WEB-INF/web.xml
+++ b/src/WEB-INF/web.xml
@@ -68,6 +68,6 @@
 	</filter-mapping>
 
   <welcome-file-list>
-    <welcome-file>user_new.jsp</welcome-file>
+    <welcome-file>welcome.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
