--- a/src/WEB-INF/web.xml
+++ b/src/WEB-INF/web.xml
@@ -32,6 +32,12 @@
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
 
+  <resource-ref>
+    <res-ref-name>jdbc/bookmarks</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+
   <persistence-unit-ref>
     <persistence-unit-ref-name>persistence/bookmarksPU</persistence-unit-ref-name>
     <persistence-unit-name>bookmarksPU</persistence-unit-name>
@@ -45,16 +51,6 @@
   <servlet-mapping>
     <servlet-name>bookmarks</servlet-name>
     <url-pattern>/b/*</url-pattern>
-  </servlet-mapping>
-
-  <servlet>
-    <servlet-name>jcaptcha</servlet-name>
-    <servlet-class>net.anthonychaves.bookmarks.web.ImageCaptchaServlet</servlet-class>
-    <load-on-startup>2</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>jcaptcha</servlet-name>
-    <url-pattern>/jcaptcha</url-pattern>
   </servlet-mapping>
 
 	<filter>
