Updates for responding with JSON

--- a/build.properties
+++ b/build.properties
@@ -1,2 +1,2 @@
 libdir=${basedir}/lib/
-deploydir=/Users/anthony/glassfish/domains/domain1/autodeploy
+deploydir=/Users/anthony/Downloads/apache-tomcat-6.0.24/webapps/
