--- a/src/WEB-INF/web.xml
+++ b/src/WEB-INF/web.xml
@@ -48,10 +48,21 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
+
   <servlet-mapping>
     <servlet-name>bookmarks</servlet-name>
     <url-pattern>/b/*</url-pattern>
   </servlet-mapping>
+
+	<filter>
+	  <filter-name>httpMethodFilter</filter-name>
+	  <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+    <filter-name>httpMethodFilter</filter-name>
+    <servlet-name>bookmarks</servlet-name>
+  </filter-mapping>
 
 	<filter>
 	  <filter-name>persistentLoginFilter</filter-name>
