starting to use jquery

--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,7 @@
         <include name="*-INF/**"/>
         <include name="img/*"/>
         <include name="*.jsp"/>
+        <include name="*.js"/>
       </fileset>
     </copy>
   </target>
